增加AI工具